--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,9 @@ environment:
     secure: IpwbqCY/2gU1iKYzF6bPJtILUY789f9fpgt+zP0LRrOK5Y3JXajA5yk/XaRkVjuy
   GithubAuthToken:
     secure: PkFAZB6f1lwOR9i3Mn9mR+kQBszikFVxmrhtOGK7p/xKlVF8o/htJc9LSQDSi3bN
-    
+  WinRmUser: TestUser
+  WinRmPassword: TestUser$Password0X!
+
 init:
   # Set "build version number" to "short-commit-hash" or when tagged to "tag name"
   - ps: >-
@@ -19,6 +21,10 @@ init:
         $env:packageVersion = "$env:APPVEYOR_REPO_TAG_NAME" 
       }
   - git config --global core.autocrlf true
+
+install:
+  - ps: net user $env:WinRmUser $env:WinRmPassword /add /y 
+  - ps: net localgroup administrators $env:WinRmUser /add
   
 build_script:
   - ps: ./build/build.ps1
