--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ environment:
   GithubAuthToken:
     secure: PkFAZB6f1lwOR9i3Mn9mR+kQBszikFVxmrhtOGK7p/xKlVF8o/htJc9LSQDSi3bN
   WinRmUser: TestUser
-  WinRmPassword: TestUser$Password0X!
+  WinRmPassword: GAbZN5R$Password0X!
 
 init:
   # Set "build version number" to "short-commit-hash" or when tagged to "tag name"
